Fix alignement bouton connexion/déconnexion desktop, le 18/03/26
Suppression position:absolute sur .user-info en >=1300px qui sortait le bouton
du flux flex du menu. Il s'aligne maintenant comme les autres nav-icon-link.

--- a/public/assets/css/cookie_dynamic.css
+++ b/public/assets/css/cookie_dynamic.css
@@ -2073,13 +2073,8 @@ body:not(.accueil) .header .user-info {
     }
 
     .user-info {
-        position: absolute;
-        top: 30px;
-        right: 50px;
         display: flex;
         align-items: center;
-        gap: 15px;
-        z-index: 10;
     }
 
     .welcome-message {
